--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "@formspree/react": "^2.4.2",
     "@react-three/drei": "9.75.0",
     "@react-three/fiber": "8.13.3",
-    "framer-motion": "^10.12.16",
+    "framer-motion": "^11.1.9",
     "framer-motion-3d": "^10.12.16",
     "gsap": "^3.12.0",
     "jotai": "^2.1.1",
     "leva": "^0.9.34",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.10.2",
+    "react-router-dom": "^6.23.1",
+    "react-spring": "^9.7.3",
     "three": "0.146.0"
   },
   "devDependencies": {
