--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@formspree/react": "^2.4.2",
+    "@react-pdf/renderer": "^3.4.4",
     "@react-three/drei": "9.75.0",
     "@react-three/fiber": "8.13.3",
     "framer-motion": "^11.1.9",
